--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -20,6 +20,9 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+      
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
 
       - name: Decode credentials.json from secret
         run: echo "${{ secrets.GOOGLE_SERVICE_KEY_BASE64 }}" | base64 -d > credentials.json
