--- a/projects.json
+++ b/projects.json
@@ -1611,7 +1611,7 @@
     "id": "647",
     "name": "MNP x ASGMA2"
   },
-    {
+  {
     "id": "651",
     "name": "MNP x ASGMA3"
   },
@@ -1642,5 +1642,9 @@
   {
     "id": "652",
     "name": "MNP x ASGMA10"
+  },
+  {
+    "id": "659",
+    "name": "MNP x ASGMA 11"
   }
 ]
