--- a/projects.json
+++ b/projects.json
@@ -1616,8 +1616,16 @@
     "name": "MNP x ASGMA3"
   },
   {
+    "id": "652",
+    "name": "MNP x ASGMA10"
+  },
+  {
     "id": "653",
     "name": "MNP x ASGMA4"
+  },
+  {
+    "id": "654",
+    "name": "MNP x ASGMA 9"
   },
   {
     "id": "655",
@@ -1636,67 +1644,267 @@
     "name": "MNP x ASGMA 8"
   },
   {
-    "id": "654",
-    "name": "MNP x ASGMA 9"
-  },
-  {
-    "id": "652",
-    "name": "MNP x ASGMA10"
-  },
-  {
     "id": "659",
     "name": "MNP x ASGMA 11"
-  },
-  {
-    "id": "662",
-    "name": "MNP x ASGMA 14"
-  },
-  {
-    "id": "661",
-    "name": "MNP x ASGMA 13"
   },
   {
     "id": "660",
     "name": "MNP x ASGMA 12"
   },
   {
-    "id": "728",
-    "name": "MNP x AMB 11"
+    "id": "661",
+    "name": "MNP x ASGMA 13"
   },
   {
-    "id": "727",
-    "name": "MNP x AMB 10"
+    "id": "662",
+    "name": "MNP x ASGMA 14"
   },
   {
-    "id": "726",
-    "name": "MNP x AMB 9"
+    "id": "710",
+    "name": "MNP x SGA New 86"
   },
   {
-    "id": "725",
-    "name": "MNP x AMB 8"
+    "id": "711",
+    "name": "MNP x SGA New 87"
   },
   {
-    "id": "724",
-    "name": "MNP x AMB 7"
+    "id": "712",
+    "name": "MNP x SGA New 88"
   },
   {
-    "id": "723",
-    "name": "MNP x AMB 6"
+    "id": "713",
+    "name": "MNP x OLG 16"
   },
   {
-    "id": "722",
-    "name": "MNP x AMB 5"
+    "id": "714",
+    "name": "MNP x SGA New 89"
   },
   {
-    "id": "721",
-    "name": "MNP x AMB 4"
+    "id": "715",
+    "name": "MNP x SGA New 90"
+  },
+  {
+    "id": "716",
+    "name": "MNP x SGA New 91"
+  },
+  {
+    "id": "717",
+    "name": "MNP x SGA New 92"
+  },
+  {
+    "id": "718",
+    "name": "MNP x SGA New 93"
+  },
+  {
+    "id": "719",
+    "name": "MNP x AMB 2"
   },
   {
     "id": "720",
     "name": "MNP x AMB 3"
   },
   {
-    "id": "719",
-    "name": "MNP x AMB 2"
+    "id": "721",
+    "name": "MNP x AMB 4"
+  },
+  {
+    "id": "722",
+    "name": "MNP x AMB 5"
+  },
+  {
+    "id": "723",
+    "name": "MNP x AMB 6"
+  },
+  {
+    "id": "724",
+    "name": "MNP x AMB 7"
+  },
+  {
+    "id": "725",
+    "name": "MNP x AMB 8"
+  },
+  {
+    "id": "726",
+    "name": "MNP x AMB 9"
+  },
+  {
+    "id": "727",
+    "name": "MNP x AMB 10"
+  },
+  {
+    "id": "728",
+    "name": "MNP x AMB 11"
+  },
+  {
+    "id": "729",
+    "name": "MNP x RGR"
+  },
+  {
+    "id": "730",
+    "name": "MNP x VIPER Prod 1"
+  },
+  {
+    "id": "731",
+    "name": "MNP x VIPER Prod 2"
+  },
+  {
+    "id": "732",
+    "name": "MNP x 328 Test"
+  },
+  {
+    "id": "733",
+    "name": "MNP x ASGMA 15"
+  },
+  {
+    "id": "734",
+    "name": "MNP x ASGMA 16"
+  },
+  {
+    "id": "735",
+    "name": "MNP x SMB 209"
+  },
+  {
+    "id": "736",
+    "name": "MNP x VIPER 3"
+  },
+  {
+    "id": "737",
+    "name": "MNP x RJP"
+  },
+  {
+    "id": "738",
+    "name": "MNP x VIPER 4"
+  },
+  {
+    "id": "739",
+    "name": "MNP x Racing"
+  },
+  {
+    "id": "740",
+    "name": "MNP x Cirkulet"
+  },
+  {
+    "id": "741",
+    "name": "MNP x SGA New 94"
+  },
+  {
+    "id": "743",
+    "name": "MNP x AGENJITU"
+  },
+  {
+    "id": "744",
+    "name": "MNP x PAKJP"
+  },
+  {
+    "id": "745",
+    "name": "MNP x OCA"
+  },
+  {
+    "id": "746",
+    "name": "MNP x RIO"
+  },
+  {
+    "id": "747",
+    "name": "MNP x SMB 210"
+  },
+  {
+    "id": "751",
+    "name": "MNP x ALFA"
+  },
+  {
+    "id": "752",
+    "name": "MNP x SMB 211"
+  },
+  {
+    "id": "753",
+    "name": "MNP x RAFI"
+  },
+  {
+    "id": "754",
+    "name": "MNP x SKE 2"
+  },
+  {
+    "id": "755",
+    "name": "MNP x SMB 212"
+  },
+  {
+    "id": "756",
+    "name": "MNP x SMB 213"
+  },
+  {
+    "id": "757",
+    "name": "MNP x SMB 214"
+  },
+  {
+    "id": "758",
+    "name": "MNP x SMB 215"
+  },
+  {
+    "id": "759",
+    "name": "MNP x GADAI"
+  },
+  {
+    "id": "760",
+    "name": "MNP x ASGMA 17"
+  },
+  {
+    "id": "761",
+    "name": "MNP x ASGMA 18"
+  },
+  {
+    "id": "762",
+    "name": "MNP x ASGMA 19"
+  },
+  {
+    "id": "763",
+    "name": "MNP x UG Minera"
+  },
+  {
+    "id": "764",
+    "name": "MNP x UG Minera 2"
+  },
+  {
+    "id": "765",
+    "name": "MNP x SMB 216"
+  },
+  {
+    "id": "766",
+    "name": "MNP x UGG 2"
+  },
+  {
+    "id": "767",
+    "name": "MNP x UGG 3"
+  },
+  {
+    "id": "768",
+    "name": "MNP x UGG 4"
+  },
+  {
+    "id": "769",
+    "name": "MNP x UGG 5"
+  },
+  {
+    "id": "770",
+    "name": "MNP x UGG 6"
+  },
+  {
+    "id": "771",
+    "name": "MNP x UGG 7"
+  },
+  {
+    "id": "772",
+    "name": "MNP x OLG 17"
+  },
+  {
+    "id": "773",
+    "name": "MNP x Racing 2"
+  },
+  {
+    "id": "774",
+    "name": "MNP x Racing 3"
+  },
+  {
+    "id": "775",
+    "name": "MNP x Racing 4"
   }
 ]
