--- a/projects.json
+++ b/projects.json
@@ -1906,5 +1906,97 @@
   {
     "id": "775",
     "name": "MNP x Racing 4"
+  },
+  {
+    "id": "776",
+    "name": "MNP x OLG 18"
+  },
+  {
+    "id": "777",
+    "name": "MNP x OLG 19"
+  },
+  {
+    "id": "778",
+    "name": "MNP x Racing 5"
+  },
+  {
+    "id": "779",
+    "name": "MNP x Racing 6"
+  },
+  {
+    "id": "781",
+    "name": "MNP x Racing 7"
+  },
+  {
+    "id": "782",
+    "name": "MNP x Racing 8"
+  },
+  {
+    "id": "783",
+    "name": "MNP x Racing x"
+  },
+  {
+    "id": "784",
+    "name": "MNP x Racing 10"
+  },
+  {
+    "id": "785",
+    "name": "MNP x Racing 11"
+  },
+  {
+    "id": "786",
+    "name": "MNP x Racing 12"
+  },
+  {
+    "id": "787",
+    "name": "MNP x Racing 13"
+  },
+  {
+    "id": "788",
+    "name": "MNP x Racing 14"
+  },
+  {
+    "id": "789",
+    "name": "MNP x UGG 8"
+  },
+  {
+    "id": "790",
+    "name": "MNP x UG Minera 3"
+  },
+  {
+    "id": "791",
+    "name": "MNP x SMB 217"
+  },
+  {
+    "id": "792",
+    "name": "MNP x Racing 15"
+  },
+  {
+    "id": "793",
+    "name": "MNP x Racing 16"
+  },
+  {
+    "id": "794",
+    "name": "MNP x Racing 17"
+  },
+  {
+    "id": "795",
+    "name": "MNP x Racing 18"
+  },
+  {
+    "id": "796",
+    "name": "MNP x Racing 19"
+  },
+  {
+    "id": "797",
+    "name": "MNP x Racing 20"
+  },
+  {
+    "id": "798",
+    "name": "MNP x Racing 9"
+  },
+  {
+    "id": "824",
+    "name": "MNP x Racing 21"
   }
 ]
