Re-run September-October and Update project list

--- a/projects.json
+++ b/projects.json
@@ -1998,5 +1998,405 @@
   {
     "id": "824",
     "name": "MNP x Racing 21"
+  },
+  {
+    "id": "825",
+    "name": "VEGAS USDT"
+  },
+  {
+    "id": "825",
+    "name": "VEGAS USDT"
+  },
+  {
+    "id": "826",
+    "name": "MNP x SGA New 95"
+  },
+  {
+    "id": "827",
+    "name": "MNP x Paris"
+  },
+  {
+    "id": "828",
+    "name": "MNP x Didi"
+  },
+  {
+    "id": "829",
+    "name": "MNP x OLG 20"
+  },
+  {
+    "id": "830",
+    "name": "ORION Internal"
+  },
+  {
+    "id": "831",
+    "name": "MNP x OLG 21"
+  },
+  {
+    "id": "832",
+    "name": "MNP x OLG 22"
+  },
+  {
+    "id": "833",
+    "name": "MNP x OLG 23"
+  },
+  {
+    "id": "834",
+    "name": "MNP x WAK"
+  },
+  {
+    "id": "835",
+    "name": "MNP x Racing 22"
+  },
+  {
+    "id": "836",
+    "name": "MNP x Racing 23"
+  },
+  {
+    "id": "842",
+    "name": "MNP x Paris 2"
+  },
+  {
+    "id": "845",
+    "name": "MNP x Racing 24"
+  },
+  {
+    "id": "846",
+    "name": "MNP x Racing 25"
+  },
+  {
+    "id": "847",
+    "name": "MNP x BANKERTT"
+  },
+  {
+    "id": "848",
+    "name": "MNP x ASGMA 20"
+  },
+  {
+    "id": "849",
+    "name": "MNP x ASGMA 21"
+  },
+  {
+    "id": "850",
+    "name": "MNP x ASGMA 22"
+  },
+  {
+    "id": "851",
+    "name": "MNP x ASGMA 23"
+  },
+  {
+    "id": "852",
+    "name": "MNP x ASGMA 24"
+  },
+  {
+    "id": "853",
+    "name": "MNP x SMB 218"
+  },
+  {
+    "id": "854",
+    "name": "MNP x SMB 219"
+  },
+  {
+    "id": "855",
+    "name": "MNP x SMB 220"
+  },
+  {
+    "id": "856",
+    "name": "MNP x SMB 221"
+  },
+  {
+    "id": "857",
+    "name": "MNP x SMB 222"
+  },
+  {
+    "id": "858",
+    "name": "MNP x SMB 223"
+  },
+  {
+    "id": "859",
+    "name": "MNP x SMB 224"
+  },
+  {
+    "id": "860",
+    "name": "MNP x SMB 225"
+  },
+  {
+    "id": "861",
+    "name": "MNP x SMB 226"
+  },
+  {
+    "id": "862",
+    "name": "MNP x SMB 227"
+  },
+  {
+    "id": "863",
+    "name": "MNP x OLG 24"
+  },
+  {
+    "id": "864",
+    "name": "MNP x Racing 26"
+  },
+  {
+    "id": "865",
+    "name": "MNP x ASGMA 25"
+  },
+  {
+    "id": "866",
+    "name": "MNP x ASGMA 26"
+  },
+  {
+    "id": "867",
+    "name": "MNP x OLG 25"
+  },
+  {
+    "id": "868",
+    "name": "MNP x SMB 228"
+  },
+  {
+    "id": "869",
+    "name": "MNP x SMB 229"
+  },
+  {
+    "id": "870",
+    "name": "MNP x SMB 230"
+  },
+  {
+    "id": "871",
+    "name": "MNP x Racing 27"
+  },
+  {
+    "id": "872",
+    "name": "MNP x Racing 28"
+  },
+  {
+    "id": "873",
+    "name": "MNP x Racing 29"
+  },
+  {
+    "id": "874",
+    "name": "MNP x WAK 2"
+  },
+  {
+    "id": "875",
+    "name": "MNP x WAK 3"
+  },
+  {
+    "id": "876",
+    "name": "MNP x WAK 4"
+  },
+  {
+    "id": "877",
+    "name": "MNP x WAK 5"
+  },
+  {
+    "id": "878",
+    "name": "MNP x WAK 6"
+  },
+  {
+    "id": "879",
+    "name": "MNP x SMB 231"
+  },
+  {
+    "id": "880",
+    "name": "MNP x SMB 232"
+  },
+  {
+    "id": "881",
+    "name": "MNP x WAK 7"
+  },
+  {
+    "id": "882",
+    "name": "MNP x WAK 8"
+  },
+  {
+    "id": "883",
+    "name": "MNP x SGA New 96"
+  },
+  {
+    "id": "884",
+    "name": "MNP NXS Internal"
+  },
+  {
+    "id": "885",
+    "name": "MNP x MLKY 2"
+  },
+  {
+    "id": "886",
+    "name": "MNP x MLKY 3"
+  },
+  {
+    "id": "887",
+    "name": "MNP x MLKY 4"
+  },
+  {
+    "id": "888",
+    "name": "MNP x MLKY 5"
+  },
+  {
+    "id": "889",
+    "name": "MNP x MLKY 6"
+  },
+  {
+    "id": "890",
+    "name": "MNP x MLKY 7"
+  },
+  {
+    "id": "891",
+    "name": "MNP x MLKY 8"
+  },
+  {
+    "id": "892",
+    "name": "MNP x MLKY 9"
+  },
+  {
+    "id": "893",
+    "name": "MNP x MLKY 10"
+  },
+  {
+    "id": "894",
+    "name": "MNP x MLKY 11"
+  },
+  {
+    "id": "896",
+    "name": "MNP x BAGUS"
+  },
+  {
+    "id": "897",
+    "name": "MNP x OLG 26"
+  },
+  {
+    "id": "898",
+    "name": "MNP x B MLKY"
+  },
+  {
+    "id": "899",
+    "name": "MNP x B MLKY 2"
+  },
+  {
+    "id": "900",
+    "name": "MNP x B MLKY 3"
+  },
+  {
+    "id": "901",
+    "name": "MNP x SMB 233"
+  },
+  {
+    "id": "902",
+    "name": "MNP x SMB 234"
+  },
+  {
+    "id": "903",
+    "name": "MNP x SMB 235"
+  },
+  {
+    "id": "904",
+    "name": "MNP x SMB 236"
+  },
+  {
+    "id": "905",
+    "name": "MNP x WAK 9"
+  },
+  {
+    "id": "906",
+    "name": "MNP X NXS RJDW"
+  },
+  {
+    "id": "907",
+    "name": "MNP x VIPER 5"
+  },
+  {
+    "id": "908",
+    "name": "MNP x Racing Team 30"
+  },
+  {
+    "id": "909",
+    "name": "MNP x PAKJP 2"
+  },
+  {
+    "id": "910",
+    "name": "MNP x OLG 27"
+  },
+  {
+    "id": "911",
+    "name": "MNP x OLG 28"
+  },
+  {
+    "id": "912",
+    "name": "MNP x UGG 9"
+  },
+  {
+    "id": "913",
+    "name": "MNP x Abom"
+  },
+  {
+    "id": "914",
+    "name": "MNP x Lee"
+  },
+  {
+    "id": "915",
+    "name": "MNP x Default 5"
+  },
+  {
+    "id": "916",
+    "name": "MNP x Default 6"
+  },
+  {
+    "id": "917",
+    "name": "MNP x Default 7"
+  },
+  {
+    "id": "918",
+    "name": "MNP x Default 8"
+  },
+  {
+    "id": "919",
+    "name": "MNP x Default 9"
+  },
+  {
+    "id": "920",
+    "name": "MNP x Default 10"
+  },
+  {
+    "id": "921",
+    "name": "MNP x Default 11"
+  },
+  {
+    "id": "922",
+    "name": "MNP x Default 12"
+  },
+  {
+    "id": "923",
+    "name": "MNP x Default 13"
+  },
+  {
+    "id": "924",
+    "name": "MNP x Default 14"
+  },
+  {
+    "id": "925",
+    "name": "MNP x Default 15"
+  },
+  {
+    "id": "926",
+    "name": "MNP x Default 16"
+  },
+  {
+    "id": "927",
+    "name": "MNP x Default 17"
+  },
+  {
+    "id": "928",
+    "name": "MNP x Default 18"
+  },
+  {
+    "id": "929",
+    "name": "MNP x Default 19"
+  },
+  {
+    "id": "930",
+    "name": "MNP x Default 20"
+  },
+  {
+    "id": "931",
+    "name": "MNP x EXCH"
   }
 ]
