--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -5,6 +5,9 @@ on:
     - cron: '0 22 * * *'  # Jam 5 pagi WIB (UTC+7)
   workflow_dispatch:       # Bisa dijalankan manual juga
 
+permissions:
+  contents: write
+
 jobs:
   run-scraper:
     runs-on: ubuntu-latest
@@ -48,6 +51,21 @@ jobs:
         env:
           EMAIL: ${{ secrets.EMAIL }}
           PASSWORD: ${{ secrets.PASSWORD }}
+          SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
+          SCRAPING_BASE_URL: ${{ secrets.LUNA_BASE_URL }}
+
+      - name: Commit updated projects.json if changed
+        run: |
+          if git status --porcelain projects.json | grep .; then
+            echo "projects.json changed, committing..."
+            git config user.name "github-actions[bot]"
+            git config user.email "github-actions[bot]@users.noreply.github.com"
+            git add projects.json
+            git commit -m "chore: update projects list [skip ci]" || echo "Nothing to commit"
+            git push
+          else
+            echo "No changes in projects.json"
+          fi
 
       - name: Run scraper script
         run: node scrape.js
